----

  * Included Core patch #31200 - change to support perl 5.10 for
    Filter::Util::Call

  * Also included the equivalent changes for the other filters. Patch
    kindly provided by Steve Hay.

1.35 25 February 2009
----

  * Included Core patches 32864, 33341 & 34776

  * Side effect of above patches means that Filters needs at least Perl 5.005

1.36 28 February 2009
----

  * Fixed install issue [RT #28232]

1.37 9 June 2009
----

  * No new feature or bug fixes - just sync with perl core.

1.38 24 April 2011
----

  * Versions being seperate from Module versions results in dependency confusion
    Bumped all versions to match the distribution version number.
    [RT #67655]

  * Fix decrypt to work with Perl 5.14
    [RT #67656]

  * Update the Filter-Simple URL
    [RT #49778]

1.39 30 April 2011
----

  * Fix decrypt to work with Perl 5.14
    [RT #67656]

1.40 9 Feb 2012 rurban
----

  * Fix tee and all tests to work with Perl 5.14 and higher.
    PVIO has no IV field anymore, so abuse the empty IoOFP,
    which is only used for printing, not reading.
    Fixes [RT #56875] and more.
    Tested for 5.6.2, 5.8.4, 5.8.5, 5.8.8, 5.8.9, 5.10.1, 5.12.4,
    5.14.2, 5.15.7

1.41 18 Feb 2012 rurban
----

  * Hide example packages from the pause indexer

1.42 20 Feb 2012 rurban
----

  * Improve t/tee.t test 5 on windows which allows all Administrator
    members read-access [RT #75164]

1.43 21 Feb 2012 rurban
----

  * Fix more windows tests:
    http://www.cpantesters.org/cpan/report/9e790a72-6bf5-1014-9f3b-641f296be760

1.44 2012-06-18 rurban
----

  * Sync t/call.t with core fixes in 2adbc9b6

1.45 2012-06-19 rurban
----

  * Sync perlfilter.pod with core improvements

1.46 2013-03-29 rurban
----

  * Fix RT #84210 Bad NAME in Makefile.PL (miyagawa)

  * Fix RT #82687 cpansign MANIFEST failure (myra)

  * Work on RT #41285 test failures with non-english locale (reported by srezic)

  * Skip patching the src for newWarnings style, these are the default